--- a/Homepage.html
+++ b/Homepage.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        
+        <div class="logo">
             <a href="homepage.html">
             <img src="Img/logo.png" alt="" />
 </body>
