--- a/Homepage.html
+++ b/Homepage.html
@@ -8,12 +8,50 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet">
+    <link href="file://///jcub.edu.au/homedirs$/jc479637/aab/ICT 1/TheWedWorks/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <header>
         <div class="logo">
             <a href="homepage.html">
-            <img src="Img/logo.png" alt="" />
+            <img src="Img/Untitled.png" alt="" />
+            </a>
+            </div>
+            <nav id="main-nav">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#announcements">Our Story</a></li>
+                <li><a href="#about">What we Deliver</a></li>
+                <li><a href="#services">Expense Corner</a></li>
+                <li><a href="#dresses">Our Wedding Work</a></li>
+                <li><a href="#contact">Attaché</a></li>
+                <li><a href="#contact">Reach Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section id="home">
+       <hr>
+        <h1>Plan Your dream Wedding</h1>       
+        <p>Your dream, our commitment</p>
+        <a class="register-button" href="services.html#register">Know More</a>
+        <br>
+        <a href="#about">
+           <i class="fas fa-chevron-circle-down"></i>
+        </a>
+    </section>
+    <section id="Our Story">
+        <h3>Our Story</h3>
+        <hr/>
+
+        <ul class="list-title">
+            <li class="list-item">We have some cool things happening that we want people to know about: this month you can purchase 3 drinks for the price of 2 at the bar.</li>
+            <li class="list-item">First-time party-goers get a 50% discount on entry</li>
+            <li class="list-item">If you get a costume custom made, your next party entry is free if you wear that costume.</li>
+            <li class="list-item">Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket. Tell them you’ve been to CossiePlay!</li>
+        </ul>
+    </section>
+            
 </body>
 </html>
