--- a/what we deliver.html
+++ b/what we deliver.html
@@ -87,7 +87,7 @@
       <h1 class="xlarge-font"><b>Food & Beverages</b></h1>
       <h1 class="large-font" style="color:#F77ADF;"><b>Hungry?</b></h1>
       <p><span style="font-size:36px">Food, Food.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      <button class="button" style="color:#F77ADF;">Download Application</button>
+      <button class="button" style="background-color:#F77ADF;">Download Application</button>
     </div>
     <div class="column-33">
         <img src="img/img14.jpg" width="335" height="300" >
